--- a/4-Inferencia/1-intro-a-cis-.Rmd
+++ b/4-Inferencia/1-intro-a-cis-.Rmd
@@ -14,13 +14,17 @@ editor_options:
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
+library(GGally)
+library(here)
 theme_set(theme_bw())
 ```
 
 ## Os dados
 
 ```{r}
-lastfm = read.csv("dados/experimento-lastfm.csv")
+lastfm = read_csv(here("dados/experimento-lastfm.csv"), 
+                  col_types = cols(.default = col_double(), 
+                                   user = col_character()))
 glimpse(lastfm)
 
 lastfm = select(lastfm, news, ecletic)
@@ -41,14 +45,16 @@ sample(lastfm$news, 100) %>% mean()
 sample(lastfm$news, 100) %>% mean()
 ```
 
-Se fizermos isso muitas vezes podemos ver como essa variação acontece.
+Se fizermos isso muitas vezes podemos ver como essa variação acontece. A distribuição dos valores de uma estatística em diferentes amostras de uma população se chama **distribuição amostral** da estatística.
 
 ```{r}
 set.seed(1)
 
 amostras = data.frame(amostra = 1:1000) %>% # faremos 1000 vezes
-  group_by(amostra) %>% 
-  do(data.frame(media = sample(lastfm$news, 100) %>% mean()))
+  mutate(media = map_dbl(amostra, ~ lastfm %>% 
+                                      pull(news) %>% 
+                                      sample(100) %>% 
+                                      mean()))
 
 amostras
 
@@ -58,12 +64,14 @@ amostras %>%
   geom_vline(xintercept = mean(lastfm$news)) # média calculada com todos os dados
 ```
 
-E se a amostra fosse muito menor?
+E se o tamanho da amostra (*n*) fosse muito menor?
 
 ```{r}
 amostras = data.frame(amostra = 1:1000) %>% # faremos 1000 vezes
-  group_by(amostra) %>% 
-  do(data.frame(media = sample(lastfm$news, 10) %>% mean()))
+  mutate(media = map_dbl(amostra, ~ lastfm %>% 
+                                      pull(news) %>% 
+                                      sample(10) %>% 
+                                      mean()))
 
 amostras
 
@@ -78,13 +86,15 @@ A mesma lógica vale para outras estatísticas além da média. O código abaixo
 
 ```{r}
 amostras = data.frame(amostra = 1:1000) %>% # faremos 1000 vezes
-  group_by(amostra) %>% 
-  do(data.frame(media = sample(lastfm$news, 100) %>% median()))
+  mutate(estatistica = map_dbl(amostra, ~ lastfm %>% 
+                                      pull(news) %>% 
+                                      sample(100) %>% 
+                                      median()))
 
 amostras
 
 amostras %>% 
-  ggplot(aes(media)) + 
+  ggplot(aes(estatistica)) + 
   geom_histogram(binwidth = .5, fill = "white", colour = "darkgrey") + 
   geom_vline(xintercept = median(lastfm$news)) # média calculada com todos os dados
 ```
@@ -97,9 +107,9 @@ O principal a entender aqui é que se conhecermos a distribuição amostral, sab
 
 ## A situação mais comum na vida real
 
-Normalmente temos *uma amostra* da população apenas. Daí não conhecemos a distribuição amostral. Mas gostaríamos de a partir da nossa amostra estimar onde está uma estatística para a população. 
+Normalmente temos *uma amostra* da população apenas. Daí não conhecemos a distribuição amostral. Mas gostaríamos de a partir da nossa amostra estimar onde está a estatística para a população. 
 
-Exemplo: queremos estimar qual a proporção de pessoas que gostará do produto (a estatística) entre todos os usuários (a população) a partir do cálculo da proporção de pessoas que gostou do produto (a mesma estatística) em um teste prévio com 100 pessoas (a amostra).
+Exemplo: queremos estimar qual a proporção de pessoas que gostará do produto (a estatística) entre todos os usuários (a população) a partir do cálculo da proporção de pessoas que gostou do produto (a mesma estatística) em um teste com 100 pessoas (a amostra).
 
 Repare que se conhecermos como a estatística varia na distribuição amostral (ex: 2 pontos pra mais ou pra menos cobrem 99% dos casos) e temos a estatística calculada para a amostra, poderíamos estimar uma faixa de valores onde achamos que a estatística está para a população _com 99% de confiança_.
 
@@ -117,19 +127,29 @@ Como resultado, sabemos como a estatística $e$ varia em uma simulação de $b$ 
 
 A partir dessa informação, podemos estimar quão longe no máximo a estatística $e_a$ que calculamos para nossa amostra está da estatística $e_p$ para a população. Isso porque se sabemos normalmente quão longe $e_a$ está de $e_p$ (que é o que estimamos com o boostrap), sabemos também o inverso. 
 
+Assim, se estimamos que em 99% das amostras, $e_a$ está a +/- 10 unidades de $e_p$, e calculamos que $e_a = 22$, podemos estimar que _com 99% de confiança_ $e_p$ está em $e_a +/ - 10 = [12, 32]$. 
+
+### Aplicando bootstrapping 
+
+A partir dessa informação, podemos estimar quão longe no máximo a estatística $e_a$ que calculamos para nossa amostra está da estatística $e_p$ para a população. Isso porque se sabemos normalmente quão longe $e_a$ está de $e_p$ (que é o que estimamos com o boostrap), sabemos também o inverso. 
+
 Assim, se estimamos que em 99% das amostras, $e_a$ está a +/- 10 unidades de $e_p$, e calculamos que $e_a = 22$, podemos estimar que _com 99% de confiança, $e_p$ está em $e_a +/ - 10 = [12, 32]$. 
 
 ### Aplicando bootstrapping 
 
 ```{r}
-amostra = sample(lastfm$news, 200)
+amostra = lastfm %>%  
+  sample_n(200) %>% 
+  pull(news)
 
 media_amostra = mean(amostra)
 
 repeticoes = 4000 # pelo menos 2000, mas mais não faz mal.
 
 exp_com_bootstrap <- function(x){
-  boot_x <- sample(x, size = NROW(x), replace = TRUE) # aqui é o bootstrap
+  boot_x <- sample(x,
+                   size = NROW(x), 
+                   replace = TRUE) # aqui é o bootstrap
   return(mean(boot_x))
 }
 
@@ -142,7 +162,11 @@ experimentos = data_frame(i = 1:repeticoes) %>%
 ggplot(experimentos, aes(x = media_exp)) + 
   geom_histogram(binwidth = 1, colour = "darkorange", fill = "white")
 summary(experimentos)
+```
 
+Calculando o IC:
+
+```{r}
 # IC com 90%: 
 alpha = .1
 quantile(experimentos$media_exp, 
@@ -161,7 +185,11 @@ ggplot(experimentos, aes(x = media_exp)) +
   geom_vline(aes(xintercept = cis$ci_upper), colour = "blue", size = 1.5) + 
   geom_vline(aes(xintercept = media_amostra), colour = "green") + 
     geom_vline(aes(xintercept = mean(lastfm$news)), colour = "red")
+```
 
+Com outro nível de confiança:
+
+```{r}
 # IC com 95%: 
 alpha2 = .05
 cis2 = experimentos %>% 
@@ -172,7 +200,7 @@ cis2 = experimentos %>%
            ci_upper = media_amostra - l)
 
 ggplot(experimentos, aes(x = media_exp)) + 
-  geom_histogram(binwidth = 1, colour = "darkorange", fill = "white") + 
+  geom_histogram(binwidth = 1, colour = "pink", fill = "white") + 
     geom_vline(aes(xintercept = cis$ci_lower), colour = "blue") + 
   geom_vline(aes(xintercept = cis$ci_upper), colour = "blue") + 
   geom_vline(aes(xintercept = cis2$ci_lower), colour = "purple", size = 2) + 
@@ -180,5 +208,4 @@ ggplot(experimentos, aes(x = media_exp)) +
   geom_vline(aes(xintercept = media_amostra), colour = "green")
 
 ```
-
 
